--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-openpyxl
-xlsxwriter
-requests
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+openpyxl==3.1.5
+XlsxWriter==3.2.0
+requests==2.32.3
